css/style.css
/* ***************************************
Template Name: Petrix - Personal Portfolio HTML Template
Author:  codeefly 
Author Email: info.codeefly@gmail.com 
website: 
Version: 1.0
Description: 
***************************************

CSS TABLE OF CONTENTS
===================================
01. GLOBAL CSS 
02. HOME PAGE
03. PORTFOLIO PAGE
04. PORTFOLIO DETAILS
05. SERVICES PAGE
06. SERVICE DETAILS
07. BLOG GRID PAGE
08. BLOG LIST PAGE
09. BLOG DETAILS
10. CONTACT US PAGE
11. TEXT ANIMATION
12. CUSTOM CURSOR ANIMATION
13. HOVER IMAGE
14. PRELOADER
15. BUTTON ANIMATION
16. INTRO PAGE

/*=============================
    GLOBAL CSS START
=============================*/
@import url("https://fonts.googleapis.com/css2?family=Sora:wght@200;300;400;500;600;700;800&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");

* {
  margin: 0;
  padding: 0;
}

:root {
  --colorPrimary: #f7931e;
  --paraColor: #626262;
  --colorBlack: #010101;
  --colorWhite: #ffffff;
  --bodyFont: "Sora", sans-serif;
  --bodyFontPoppins: "Poppins", sans-serif;
}

ul,
ol,
li {
  list-style: none;
  margin: 0;
  padding: 0;
}

a {
  display: inline-block;
  text-decoration: none;
}

a:hover {
  text-decoration: none;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  margin: 0;
  padding: 0;
}

p {
  line-height: 1.8;
}

p,
span {
  font-size: 16px;
  font-weight: 400;
  margin: 0;
}

body {
  overflow-x: hidden;
  scroll-behavior: smooth;
  color: var(--colorBlack);
  background: url(../images/body_bg.jpg);
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  font-family: var(--bodyFont);
}

img {
  width: 100% !important;
  height: 100% !important;
  object-fit: cover !important;
}

input,
textarea {
  width: 100%;
  padding: 12px 20px;
  outline: none;
  resize: none;
  border: 1px solid #e4e7e9;
  border-radius: 3px;
  font-size: 16px;
  font-weight: 300;
}

input::placeholder,
textarea::placeholder {
  color: #a6a6ac;
}

button {
  border: none;
}

.container_large {
  max-width: 1600px;
}

.section_heading {
  background: var(--colorBlack);
  padding: 52px 0;
  display: flex;
  align-items: center;
  justify-content: center;
}

.section_heading h2,
.section_heading h2 span {
  color: var(--colorWhite);
  font-family: var(--bodyFontPoppins);
  text-transform: uppercase;
  font-weight: 700;
  font-size: 80px;
  text-align: center;
}

.section_heading h2 span {
  -webkit-text-stroke: 1px #ffffff;
  -webkit-text-fill-color: #ffffff00;
  margin: 0 25px;
}

.section_heading_2 {
  background: var(--colorPrimary);
}

.common_btn {
  background: var(--colorBlack);
  padding: 22px 48px;
  border-radius: 10px;
  position: relative;
  z-index: 1;
  transition: all linear 0.3s;
  -webkit-transition: all linear 0.3s;
  -moz-transition: all linear 0.3s;
  -ms-transition: all linear 0.3s;
  -o-transition: all linear 0.3s;
  box-shadow: 5px 5px 0px 0px #01010120;
}
.common_btn span {
  font-size: 18px;
  font-weight: 700;
  color: var(--colorWhite);
  text-transform: capitalize;
}

.read_btn {
  text-transform: capitalize;
  color: var(--colorBlack);
  font-weight: 700;
  font-size: 16px;
  position: relative;
  transition: all linear 0.3s;
  -webkit-transition: all linear 0.3s;
  -moz-transition: all linear 0.3s;
  -ms-transition: all linear 0.3s;
  -o-transition: all linear 0.3s;
}

.read_btn::after {
  position: absolute;
  content: "\e902";
  font-family: "petrix-Icon" !important;
  right: -20px;
}

.read_btn:hover {
  color: var(--colorPrimary);
}

.breadcrumb {
  padding: 180px 0px 93px 0px;
  margin: 0;
  text-align: center;
}

.breadcrumb h1 {
  text-align: center;
  text-transform: uppercase;
  font-weight: 800;
  font-size: 150px;
}

.breadcrumb span {
  background: var(--colorPrimary);
  color: var(--colorWhite);
  padding: 6px 20px 8px 20px;
  font-weight: 600;
  border-radius: 6px;
  display: inline-block;
  margin-top: 45px;
}

.breadcrumb ul {
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  justify-content: center;
  gap: 25px;
  margin-top: 10px;
}

.breadcrumb ul li {
  font-size: 16px;
  font-weight: 500;
  color: var(--colorBlack);
  position: relative;
}

.breadcrumb ul li::after {
  position: absolute;
  content: "/";
  font-size: 16px;
  font-weight: 500;
  color: var(--colorBlack);
  top: 0;
  right: -17px;
}

.breadcrumb_2 h1 {
  text-transform: capitalize;
  font-size: 78px;
  font-weight: 700;
}

.breadcrumb ul li:last-child:after {
  display: none;
}

.pagination {
  justify-content: center;
}

.pagination li a {
  width: 55px;
  height: 55px;
  line-height: 55px;
  padding: 0;
  text-align: center;
  margin: 0px 7px !important;
  border-radius: 10px !important;
  background: var(--colorBlack) !important;
  color: var(--colorWhite) !important;
  font-size: 18px;
  border: none;
}

.pagination li a:hover,
.pagination li a.active {
  color: var(--colorWhite) !important;
  background: var(--colorPrimary) !important;
  box-shadow: none;
}

.pagination .page-link:focus {
  box-shadow: none;
}

/* for mobile menu start */
.main_menu .navbar-toggler {
  width: 40px;
  height: 40px;
  line-height: 38px;
  text-align: center;
  padding: 0;
  border-radius: 3px;
  background: var(--colorPrimary);
  color: var(--colorWhite);
  margin-right: 12px;
  -webkit-border-radius: 3px;
  -moz-border-radius: 3px;
  -ms-border-radius: 3px;
  -o-border-radius: 3px;
}

.main_menu .navbar-toggler:focus {
  box-shadow: none;
}

.main_menu .navbar-toggler.show {
  background: var(--colorBlack);
}

.main_menu .navbar-toggler .close_icon_close {
  display: none;
}

.main_menu .navbar-toggler.show .menu_icon_bar {
  display: none;
}

.main_menu .navbar-toggler.show .close_icon_close {
  display: block;
}
/* ... */

